--- a/templates/contactPage.html
+++ b/templates/contactPage.html
@@ -15,8 +15,8 @@
                 <span class="contact-header">Address:</span><br />
                 <div class="address">
                     {{sara.address.street}}<br />
-                    {{sara.address.city}},<br />
-                    {{sara.address.state}},
+                    {{sara.address.city}}<br />
+                    {{sara.address.state}}
                     {{sara.address.zip}}
                 </div>
                 <div class="me">
