--- a/templates/webWork.html
+++ b/templates/webWork.html
@@ -14,7 +14,7 @@
             <div class="illustrator adobe-thumbnail">
                 <ul class="adobe-content">
                     <li  ng-repeat="project in webWork.projects">
-                        <span><a href="{{project.url}}"><strong>{{project.name}}</strong> {{project.type}}</a></span>
+                        <span><a href="{{project.url}}" target="_blank"><strong>{{project.name}}</strong> {{project.type}}</a></span>
                         <img ng-src="{{project.image}}" alt="WebWork"/>
                     </li>
                 </ul>
